# gapline

./: .ferrflow  .gitignore  Cargo.toml  README.md  bacon.toml  output.txt  prek.toml
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/src/: http.rs  lib.rs  main.rs
cli/src/cli/: bootstrap.rs  commands.rs  completion_install.rs  exit.rs  mod.rs  output.rs  parser.rs
cli/src/cli/commands/: completion.rs  create.rs  delete.rs  mod.rs  read.rs  rules.rs  run.rs  update.rs  validate.rs
cli/src/cli/output/: mod.rs  read.rs  rules.rs  validation.rs  validation_template.html
cli/src/cli/runner/: error.rs  executor.rs  mod.rs  parser.rs
cli/tests/: completion_tests.rs  config_integration_tests.rs  http_tests.rs  output_tests.rs  rules_list_tests.rs  run_integration_tests.rs  validate_integration_tests.rs  validate_rt_integration_tests.rs
core/: CHANGELOG.md  Cargo.toml  README.md  build.rs
core/benches/: core_bench.rs
core/src/: config.rs  dataset.rs  geo.rs  lib.rs
core/src/batch/: mod.rs
core/src/crud/: common.rs  create.rs  delete.rs  mod.rs  read.rs  setters.rs  update.rs
core/src/crud/query/: eval.rs  filterable.rs  mod.rs  parser.rs  types.rs
core/src/integrity/: index.rs  mod.rs  types.rs
core/src/models/: enums.rs  fares_v2.rs  feed.rs  flex.rs  geojson.rs  ids.rs  mod.rs  records.rs  rt.rs  types.rs
core/src/parser/: csv_parser.rs  error.rs  feed_loader.rs  feed_source.rs  field_parsers.rs  mod.rs
core/src/parser/file_parsers/: agency.rs  areas.rs  attributions.rs  booking_rules.rs  calendar.rs  calendar_dates.rs  fare_attributes.rs  fare_leg_join_rules.rs  fare_leg_rules.rs  fare_media.rs  fare_products.rs  fare_rules.rs  fare_transfer_rules.rs  feed_info.rs  frequencies.rs  levels.rs  location_group_stops.rs  location_groups.rs  locations_geojson.rs  mod.rs  networks.rs  pathways.rs  rider_categories.rs  route_networks.rs  routes.rs  shapes.rs  stop_areas.rs  stop_times.rs  stops.rs  timeframes.rs  transfers.rs  translations.rs  trips.rs
core/src/validation/: engine.rs  error.rs  mod.rs  report.rs  rt_rules.rs  rules.rs  structural_rule.rs  utils.rs  validate.rs
core/src/validation/best_practices/: missing_agency_email.rs  missing_bikes_info.rs  missing_direction_id.rs  missing_route_colors.rs  missing_wheelchair_info.rs  mod.rs  redundant_route_name.rs  route_short_name_too_long.rs  stop_name_all_caps.rs
core/src/validation/csv_formating/: case_sensitivity.rs  content.rs  delimiter.rs  encoding.rs  headers.rs  mod.rs  quoting.rs  whitespace.rs
core/src/validation/csv_formatting/: case_sensitivity.rs  content.rs  delimiter.rs  encoding.rs  headers.rs  mod.rs  patterns.rs  quoting.rs  scanner.rs  whitespace.rs
core/src/validation/fares_v2_semantic/: mod.rs  rules.rs
core/src/validation/field_definition/: agency.rs  attributions.rs  booking_rules.rs  fares_v2.rs  feed_info.rs  mod.rs  pathways.rs  routes.rs  stop_times.rs  stop_times_flex.rs  stops.rs  transfers.rs  translations.rs  trips.rs
core/src/validation/field_type/: field_type_rules.rs  mod.rs  numeric_rules.rs  parse_error_converter.rs  text_rules.rs
core/src/validation/file_structure/: csv_parsing_failed.rs  duplicated_column.rs  empty_column_name.rs  empty_file.rs  empty_row.rs  gtfs_spec.rs  helpers.rs  invalid_input_files_in_subfolder.rs  invalid_row_length.rs  leading_or_trailing_whitespaces.rs  missing_calendar_files.rs  missing_recommended_file.rs  missing_required_column.rs  missing_required_file.rs  mod.rs  new_line_in_value.rs  too_many_rows.rs  unknown_column.rs  unknown_file.rs
core/src/validation/flex_semantic/: mod.rs  prior_days_coverage.rs  rules.rs
core/src/validation/foreign_key/: attributions_refs.rs  calendar_dates_service.rs  fare_attributes_agency.rs  fare_leg_join_rules.rs  fare_leg_rules_areas.rs  fare_leg_rules_network.rs  fare_leg_rules_product.rs  fare_leg_rules_timeframes.rs  fare_products_media.rs  fare_products_rider.rs  fare_rules_fare.rs  fare_rules_route.rs  fare_rules_zones.rs  fare_transfer_rules_legs.rs  fare_transfer_rules_product.rs  frequencies_trip.rs  macros.rs  mod.rs  pathways_stops.rs  route_networks.rs  routes_agency.rs  stop_areas.rs  stop_times_stop.rs  stop_times_trip.rs  stops_level.rs  stops_parent_station.rs  timeframes_service.rs  transfers_from_route.rs  transfers_from_stop.rs  transfers_from_trip.rs  transfers_to_route.rs  transfers_to_stop.rs  transfers_to_trip.rs  translations_record.rs  trips_route.rs  trips_service.rs  trips_shape.rs
core/src/validation/locations_geojson_semantic/: mod.rs  rules.rs
core/src/validation/primary_key/: mod.rs
core/src/validation/realtime_semantic/: mod.rs  rules.rs
core/src/validation/rules/: mod.rs
core/src/validation/schedule_time_validation/: block_id.rs  calendar_dates_coherence.rs  calendar_ranges.rs  coordinates.rs  distances.rs  feed_coverage.rs  frequencies.rs  mod.rs  pathways.rs  route_type_semantics.rs  service_dates.rs  shapes.rs  speed.rs  stop_hierarchy.rs  stop_times.rs  transfers.rs  trip_activity.rs  unused_entities.rs
core/src/writer/: mod.rs
core/tests/: batch_executor_tests.rs  best_practices_tests.rs  block_id_validation_tests.rs  calendar_validation_tests.rs  config_tests.rs  coordinates_validation_tests.rs  create_tests.rs  csv_formating_tests.rs  csv_formatting_tests.rs  csv_parser_tests.rs  dataset_tests.rs  delete_tests.rs  engine_filter_tests.rs  fares_v2_parsing_tests.rs  fares_v2_validation_tests.rs  feed_loader_load_tests.rs  feed_loader_tests.rs  field_definition_tests.rs  field_type_tests.rs  file_parser_tests.rs  file_structure_tests.rs  flex_parsing_tests.rs  flex_semantic_tests.rs  foreign_key_tests.rs  integrity_tests.rs  locations_geojson_parsing_tests.rs  locations_geojson_semantic_tests.rs  models_tests.rs  pathway_validation_tests.rs  primary_key_tests.rs  query_tests.rs  read_tests.rs  realtime_semantic_tests.rs  rt_parsing_tests.rs  schedule_time_validation_tests.rs  section_12_rt_validation_tests.rs  shape_distance_tests.rs  speed_validation_tests.rs  stop_hierarchy_route_type_tests.rs  third_party_tests.rs  (+5 more)
scripts/: install.ps1  (+4 more)
(+21 files in other folders)
