[workspace]
members = ["core", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Core
chrono     = { version = "0.4", features = ["serde"] }
chrono-tz  = "0.10"
csv        = "1.4.0"
dirs       = "5"
rayon      = "1.11.0"
url        = "2"
serde      = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
regex      = "1.11.1"
thiserror  = "2.0.18"
toml       = "1.0.3"
zip        = "8.2.0"
# CLI
clap          = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5"
colored     = "3.1.1"
comfy-table = "7.2.2"
indicatif   = "0.18.4"
quick-xml   = { version = "0.36", features = ["serialize"] }
# Internal
headway-core = { path = "core" }
# Dev
tempfile  = "3.26.0"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level     = 3
debug         = false
strip         = true
lto           = true
codegen-units = 1

[profile.bench]
debug = true

[profile.release.package."*"]
opt-level = 3

[workspace.lints.clippy]
pedantic = "warn"
