[package]
name    = "headway"
version = "0.13.0"
edition.workspace = true

[lib]
name = "headway"
path = "src/lib.rs"

[[bin]]
name = "headway"
path = "src/main.rs"

[dependencies]
headway-core = { workspace = true }
clap         = { workspace = true }
thiserror    = { workspace = true }
colored      = { workspace = true }
comfy-table  = { workspace = true }
indicatif    = { workspace = true }
rayon        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile   = { workspace = true }
zip        = { workspace = true }

[lints]
workspace = true
