[package]
name    = "gapline"
version = "1.5.0"
edition.workspace = true

[lib]
name = "gapline"
path = "src/lib.rs"

[[bin]]
name = "gapline"
path = "src/main.rs"

[dependencies]
gapline-core = { workspace = true }
clap          = { workspace = true }
clap_complete = { workspace = true }
thiserror    = { workspace = true }
colored      = { workspace = true }
comfy-table  = { workspace = true }
indicatif    = { workspace = true }
rayon        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
csv          = { workspace = true }
quick-xml    = { workspace = true }
chrono       = { workspace = true }
tempfile     = { workspace = true }
reqwest      = { workspace = true }
blake3       = { workspace = true }
dirs         = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
zip        = { workspace = true }
csv        = { workspace = true }
quick-xml  = { workspace = true }

[lints]
workspace = true
