[package]
name    = "headway-core"
version = "0.2.1"
edition.workspace = true

[dependencies]
chrono     = { workspace = true }
chrono-tz  = { workspace = true }
csv        = { workspace = true }
url        = { workspace = true }
indicatif  = { workspace = true }
rayon      = { workspace = true }
regex      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
toml       = { workspace = true }
zip        = { workspace = true }

[dev-dependencies]
tempfile  = { workspace = true }
criterion = { workspace = true }
zip       = { workspace = true }

[[bench]]
name    = "core_bench"
harness = false

[lints]
workspace = true
