[package]
name    = "gapline-core"
version = "1.6.0"
edition.workspace = true

[dependencies]
chrono     = { workspace = true }
chrono-tz  = { workspace = true }
csv        = { workspace = true }
dirs       = { workspace = true }
geo        = { workspace = true }
url        = { workspace = true }
indicatif  = { workspace = true }
prost      = { workspace = true }
rayon      = { workspace = true }
regex      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
toml       = { workspace = true }
zip        = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
protox      = { workspace = true }

[dev-dependencies]
tempfile  = { workspace = true }
criterion = { workspace = true }
zip       = { workspace = true }

[[bench]]
name    = "core_bench"
harness = false

[lints]
workspace = true
